fixed search on mobile

--- a/public/styles/header/header.css
+++ b/public/styles/header/header.css
@@ -10,7 +10,7 @@ main {
   width: 100%;
   height: 4rem;
   margin: 0 auto;
-  padding: var(--space-2) var(--space-6) 0 var(--space-6);
+  padding: var(--space-2) var(--space-6) 0 var(--space-2);
   display: flex;
   justify-content: space-between;
   align-items: start;
@@ -38,7 +38,7 @@ main {
 
   #main-header {
     height: 7.5rem;
-    padding-top: 0.5rem;
+    padding: var(--space-2) var(--space-6) 0 var(--space-6);
   }
   #header-nav-column {
     display: flex;
