--- a/public/styles/header/mobile.css
+++ b/public/styles/header/mobile.css
@@ -1,22 +1,3 @@
-#mobile-menu-btn {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  border: none;
-  cursor: pointer;
-  width: 2.25rem;
-  height: 2.25rem;
-  background-color: transparent;
-  padding: 0;
-  margin-top: 0.25rem;
-}
-
-#mobile-menu-btn span {
-  width: 2.25rem;
-  height: 0.2rem;
-  background-color: var(--color-gray-100);
-}
-
 #mobile-menu {
   position: fixed;
   top: 4rem;
@@ -49,11 +30,47 @@
   color: var(--color-primary-100);
 }
 
-@media (min-width: 45rem) {
-  #mobile-menu-btn {
-    display: none;
-  }
+#mobile-menu-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border: none;
+  cursor: pointer;
+  width: 2.25rem;
+  height: 2.25rem;
+  background-color: transparent;
+  padding: 0;
+  margin-top: var(--space-1);
+}
 
+#mobile-menu-btn span {
+  width: 2.25rem;
+  height: 0.2rem;
+  background-color: var(--color-gray-100);
+}
+
+.mobile-search-form {
+  margin: var(--space-1) var(--space-6) 0 auto;
+}
+
+.mobile-search-form input {
+  max-width: 10rem;
+  width: 100%;
+}
+
+.mobile-search-form button {
+  padding-left: var(--space-2);
+  display: none;
+}
+
+@media (min-width: 22rem) {
+  .mobile-search-form button {
+    display: block;
+  }
+}
+
+
+@media (min-width: 45rem) {
   #mobile-menu {
     display: none;
   }
@@ -62,7 +79,16 @@
     display: none;
   }
 
+  #mobile-menu-btn {
+    display: none;
+  }
+
   #categories-mobile {
     display: none;
+  }
+
+  .mobile-search-form {
+    display: none;
+    margin: 0;
   }
 }
