--- a/public/styles/header/search.css
+++ b/public/styles/header/search.css
@@ -1,10 +1,10 @@
-#search-form {
+.search-form {
     display: flex;
     align-items: center;
     justify-content: center;
   }
 
-  #search-form button {
+  .search-form button {
     color: var(--color-primary-500-contrast);
     background: none;
     border: none;
@@ -16,11 +16,11 @@
     padding: var(--space-2);
   }
   
-  #search-form button:hover {
+  .search-form button:hover {
     background-color: var(--color-primary-500-bg);
   }
 
-#search-input {
+  .search-form input {
     font: inherit;
     width: 10rem;
     padding: var(--space-2);
@@ -31,10 +31,10 @@
     border: none;
   }
   
-  #search-input:hover, #search-input:focus {
+  .search-form input:hover, .search-form input:focus {
     border-bottom: 1px solid var(--color-gray-100); 
   }
   
-  #search-input::placeholder {
+  .search-form input::placeholder {
     color: var(--color-gray-200);
   }
